<resources>
    <string name="app_name">Android Login Sample</string>
    <string name="privacy_policy_content">This is an app created for a Technical Assignment by Karthik Raja.G for Accenture organization.</string>
    <string name="home">Home</string>
    <string name="account_login">Account Login</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="password">Password</string>
    <string name="enter_your_email_password">Enter Your Email Password</string>
    <string name="log_in">Log In</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="invalid_user">Invalid user</string>
    <string name="incorrect_password">Incorrect password</string>
</resources>