<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rec_gradient"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_spacing_collapsing"
                android:background="@drawable/oval_white_bottom_corner">

                <ImageView
                    android:layout_width="@dimen/element_height"
                    android:layout_height="@dimen/element_height"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_launcher"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/content_padding_large"
                android:gravity="center"
                android:text="@string/account_login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_padding_xlarge"
                android:layout_marginTop="@dimen/content_padding_xnormal"
                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_padding_large"
                android:layout_marginTop="@dimen/element_spacing_small"
                android:layout_marginEnd="@dimen/content_padding_large"
                android:background="@android:color/white"
                android:hint="@string/enter_your_email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/element_spacing_xlarge"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_padding_xlarge"
                android:layout_marginTop="@dimen/content_padding_xnormal"
                android:text="@string/password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_padding_large"
                android:layout_marginTop="@dimen/element_spacing_small"
                android:layout_marginEnd="@dimen/content_padding_large"
                android:background="@android:color/white"
                android:hint="@string/enter_your_email_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/element_spacing_xlarge"
                android:textSize="@dimen/font_size_normal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/content_padding_xlarge"
                android:layout_marginBottom="@dimen/content_padding_xlarge"
                android:background="@drawable/oval_primary"
                android:onClick="onClickLogin"
                android:paddingStart="@dimen/content_padding_xxlarge"
                android:paddingEnd="@dimen/content_padding_xxlarge"
                android:text="@string/log_in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>